# modest-engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  ToDo.md  engine_workspace.code-workspace  meConfig.h.in  rendering_informations.txt
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  IPO.cmake  PCH.cmake  Sanitizers.cmake
doxygen/html/: _array_8h.html  _array_8h.js  _array_8h__dep__incl.dot  _array_8h__incl.dot  _array_8h_source.html  _console_8h.html  _console_8h__dep__incl.dot  _console_8h__incl.dot  _console_8h_source.html  _engine_8h.html  _engine_8h.js  _engine_8h__incl.dot  _engine_8h_source.html  _entity_8h.html  _entity_8h__dep__incl.dot  _entity_8h__incl.dot  _entity_8h_source.html  _factory_8h.html  _factory_8h__incl.dot  _factory_8h_source.html  _handle_8h.html  _handle_8h__dep__incl.dot  _handle_8h__incl.dot  _handle_8h_source.html  _handle_entry_8h.html  _handle_entry_8h__dep__incl.dot  _handle_entry_8h__incl.dot  _handle_entry_8h_source.html  _handle_manager_8h.html  _handle_manager_8h.js  _handle_manager_8h__incl.dot  _handle_manager_8h_source.html  _helper_8h.html  _helper_8h.js  _helper_8h__dep__incl.dot  _helper_8h__incl.dot  _helper_8h_source.html  _i_console_printer_8h.html  _i_console_printer_8h.js  _i_console_printer_8h__dep__incl.dot  (+285 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  (+67 more)
doxygen/latex/: _array_8h.tex  _array_8h.tex.tmp  _array_8h__dep__incl.dot  _array_8h__incl.dot  _console_8h.tex  _console_8h__dep__incl.dot  _console_8h__incl.dot  _engine_8h.tex  _engine_8h__incl.dot  _entity_8h.tex  _entity_8h__dep__incl.dot  _entity_8h__incl.dot  _factory_8h.tex  _factory_8h__incl.dot  _handle_8h.tex  _handle_8h__dep__incl.dot  _handle_8h__incl.dot  _handle_entry_8h.tex  _handle_entry_8h__dep__incl.dot  _handle_entry_8h__incl.dot  _handle_manager_8h.tex  _handle_manager_8h__incl.dot  _helper_8h.tex  _helper_8h__dep__incl.dot  _helper_8h__incl.dot  _i_console_printer_8h.tex  _i_console_printer_8h__dep__incl.dot  _i_console_printer_8h__incl.dot  _i_entity_component_8h.tex  _i_entity_component_8h__dep__incl.dot  _i_entity_component_8h__incl.dot  _i_message_handler_8h.tex  _i_message_handler_8h__dep__incl.dot  _i_message_handler_8h__incl.dot  _locator_8h.tex  _locator_8h__dep__incl.dot  _locator_8h__incl.dot  _math_utilities_8h.tex  _math_utilities_8h__dep__incl.dot  _matrix3x3_8h.tex  (+110 more)
engine/: CMakeLists.txt  NewClassTest.cpp  NewClassTest.h  main.cpp
engine/common/: assert.h  typedef.h
engine/html/: graph_legend.html  index.html  navtreedata.js
engine/include/: CMakeLists.txt
engine/include/common/: ConsoleCI.h  Helper.h  Locator.h  Random.h  StringHelper.h  WinCommandPromptCI.h  assert.h  typedef.h
engine/include/common/console/: Console.h  IConsolePrinter.h  NullPrinter.h  WinConsolePrinter.h
engine/include/common/datastructures/: Array.h
engine/include/core/: CMakeLists.txt  Engine.h  Entity.h  FlyingGoomba.h  GameWorldModule.h  Goomba.h  IEntityComponent.h  RenderModule.h  System.h  TestComponent.h  Transform.h
engine/include/core/components/: SpriteComponent.h
engine/include/core/message/: IMessageHandler.h  Message.h
engine/include/core/resource/: CMakeLists.txt  Factory.h  Handle.h  HandleEntry.h  HandleManager.h  Message.h  ResourceHolder.h  ResourceHolder.hpp  ResourceHolder.inl
engine/include/math/: MathUtilities.h  Matrix3x3.h  Vector2.h  Vector3.h
engine/latex/: refman.tex
engine/src/: CMakeLists.txt
engine/src/common/: CMakeLists.txt  ConsoleCI.cpp  Helper.cpp  Locator.cpp  Random.cpp  StringHelper.cpp  WinCommandPromptCI.cpp  assert.cpp
engine/src/common/console/: CMakeLists.txt  Console.cpp  IConsolePrinter.cpp  NullPrinter.cpp  WinConsolePrinter.cpp
engine/src/common/datastructures/: Array.cpp  CMakeLists.txt
engine/src/core/: CMakeLists.txt  Engine.cpp  Entity.cpp  FlyingGoomba.cpp  GameWorldModule.cpp  Goomba.cpp  IEntityComponent.cpp  RenderModule.cpp  System.cpp  TestComponent.cpp  Transform.cpp
engine/src/core/components/: CMakeLists.txt  SpriteComponent.cpp
engine/src/core/message/: CMakeLists.txt  IMessageHandler.cpp  Message.cpp
engine/src/core/resource/: CMakeLists.txt  Factory.cpp  Handle.cpp  HandleEntry.cpp  HandleManager.cpp  Message.cpp  ResourceHolder.inl
engine/src/math/: CMakeLists.txt  Matrix3x3.cpp  Vector2.cpp  Vector3.cpp
engine/subsystem/: CMakeLists.txt  NewClass.cpp  NewClass.h
graphics/: modest-engine.afdesign
res/: modest-engine.afdesign
res/textures/: basic_quad.aseprite
uml/: modest-engine.mdj
